💁🐏 Checkpoint ./.glitch-assets:43714476/1061 ./index.html:43714476/480

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <a-scene>
       <a-assets>
-        <a-asset-item id="bird" src="https://cdn.glitch.global/78a17cd4-2f19-404f-ba86-78a460c7dcd3/scene.glb?v=1649534455151"></a-asset-item>
+        <a-asset-item id="bird" src="https:60c7dcd3/scene.glb?v=1649534455151"></a-asset-item>
       </a-assets>
 
       <a-entity gltf-model="#bird" scale="0.01 0.01 0.01" animation-mixer="clip:Take 001; loop:2s"></a-entity>
