--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
   <head>
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
+    <script src="https://unpkg.com/aframe-environment-component@1.3.0/dist/aframe-environment-component.min.js"></script>
   </head>
   <body>
     <a-scene>
       <a-assets>
-        <a-asset-item id="bird" src="https:60c7dcd3/scene.glb?v=1649534455151"></a-asset-item>
+        <a-asset-item id="bird" src="https://cdn.glitch.global/78a17cd4-2f19-404f-ba86-78a460c7dcd3/scene.glb?v=1649534455151"></a-asset-item>
       </a-assets>
-
+      <a-entity environment="preset: arches; groundColor: #445; grid: cross"></a-entity>
       <a-entity gltf-model="#bird" scale="0.01 0.01 0.01" animation-mixer="clip:Take 001; loop:2s"></a-entity>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
+      <a-sky color="#ffffs"></a-sky>
     </a-scene>
   </body>
 </html>
