--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
     <a-scene>
       <a-assets>
-        <a-asset-item id="bird" src="https://cdn.glitch.global/78a17cd4-2f19-404f-ba86-78a460c7dcd3/scene.glb?v=1649534455151"></a-asset-item>
+        <a-asset-item id="bird" src="https://cdn.glitch.me/78a17cd4-2f19-404f-ba86-78a460c7dcd3/scene.gltf?v=1649684503141"></a-asset-item>
       </a-assets>
-      <a-entity environment="preset: arches; groundColor: #445; grid: cross"></a-entity>
-      <a-entity gltf-model="#bird" scale="0.01 0.01 0.01" animation-mixer="clip:Take 001; loop:2s"></a-entity>
+      
+      <a-entity gltf-model="#bird" scale="1 1 1"></a-entity>
       <a-sky color="#ffffs"></a-sky>
     </a-scene>
   </body>
