🐩🏹 Checkpoint ./index.html:43714476/98

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <a-assets>
         <a-asset-item id="bird" src="https://cdn.glitch.me/78a17cd4-2f19-404f-ba86-78a460c7dcd3/scene.gltf?v=1649684503141"></a-asset-item>
       </a-assets>
-      
-      <a-entity gltf-model="#bird" scale="1 1 1"></a-entity>
+      <a-entity environment="preset: forest; groundColor: #442; grid: cross"></a-entity>
+      <a-entity gltf-model="#bird" scale="1.2 1.2 1.2"></a-entity>
       <a-sky color="#ffffs"></a-sky>
     </a-scene>
   </body>
