👄🤘 Checkpoint ./.glitch-assets:43714476/555 ./index.html:43714476/314

--- a/index.html
+++ b/index.html
@@ -9,14 +9,11 @@
     <a-scene>
       <a-assets>
         <a-asset-item
-          id="bird"
-          src="https://cdn.glitch.global/78a17cd4-2f19-404f-ba86-78a460c7dcd3/scene.glb?v=1649534455151"
+          id="village"
+          src="https://cdn.glitch.me/78a17cd4-2f19-404f-ba86-78a460c7dcd3/village.gltf?v=1649732485782"
         ></a-asset-item>
       </a-assets>
-      <a-entity
-        environment="preset: forest; groundColor: #442; grid: cross"
-      ></a-entity>
-      <a-entity gltf-model="#bird" scale="0.01 0.01 0.01"></a-entity>
+      <a-entity gltf-model="#village" scale="1 1 1"></a-entity>
       <a-sky color="#ffffs"></a-sky>
     </a-scene>
   </body>
