--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
           id="village"
           src="https://cdn.glitch.me/78a17cd4-2f19-404f-ba86-78a460c7dcd3/village.gltf?v=1649732485782"
         ></a-asset-item>
-      </a-assets>
+        <a-asset-item id="villager"
+          src="https://cdn.glitch.global/78a17cd4-2f19-404f-ba86-78a460c7dcd3/villager.glb?v=1649734363149"
+        ></a-asset-item>
+        </a-assets>
       <a-entity gltf-model="#village" scale="1 1 1"></a-entity>
+      <a-entity gltf-model="#villager" scale="0.001 0.001 0.001"></a-entity>
       <a-sky color="#ffffs"></a-sky>
     </a-scene>
   </body>
