🕷😹 Checkpoint ./.glitch-assets:43714476/332 ./index.html:43714476/379

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         <a-asset-item id="villager"
           src="https://cdn.glitch.global/78a17cd4-2f19-404f-ba86-78a460c7dcd3/villager.glb?v=1649734363149"
         ></a-asset-item>
-        </a-assets>
+        <a-asset-item id="anime"
+          src="https://cdn.glitch.global/78a17cd4-2f19-404f-ba86-78a460c7dcd3/anime.gltf?v=1649736347460"
+        ></a-asset-item>  
+      </a-assets>
+      <a-entity gltf-model="#anime" scale="0.1 0.1 0.1" position="2 0 0"></a-entity>
       <a-entity gltf-model="#village" scale="1 1 1"></a-entity>
       <a-entity gltf-model="#villager" scale="0.001 0.001 0.001"></a-entity>
       <a-sky color="#ffffs"></a-sky>
