--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <img id="karigurashiPoster" src="https://cdn.aframe.io/examples/ui/karigurashiPoster.jpg" crossorigin="anonymous"/>
         <a-mixin
           id="frame"
-          geometry="primitive: plane; width: 0.5783552; height: 0.8192"
-          material="color: white; shader: flat"
-          animation__scale="property: scale; to: 1.2 1.2 1.2; dur: 200; startEvents: mouseenter"
+          geometry="primitive: plane; width: 0.5783552; height: 0.8192;"
+          material="shader: flat"
+          animation__scale="property: scale; to: 1 1 1; dur: 200; startEvents: mouseenter"
           animation__scale_reverse="property: scale; to: 1 1 1; dur: 200; startEvents: mouseleave"
          ></a-mixin>
          <a-mixin
@@ -71,7 +71,7 @@
 
       <a-entity
         position="0 1.6 0"
-        camera look-controls="magicWindowTrackingEnabled: false; touchEnabled: false; mouseEnabled: false">
+        
         <a-entity
           id="fadeBackground"
           geometry="primitive: sphere; radius: 2.5"
@@ -87,7 +87,7 @@
         <!-- Poster menu -->
         <a-entity id="menu" highlight>
           <a-entity id="karigurashiButton" position="-0.8 0 0" mixin="frame" class="raycastable menu-button">
-            <a-entity gltf-model="#" mixin="poster"></a-entity>
+            <a-entity gltf-model="#villager" scale="0.001 0.001 0.001" position="0 -1 0"></a-entity>
           </a-entity>
 
           <a-entity id="kazetachinuButton" position="0 0 0" mixin="frame" class="raycastable menu-button">
