--- a/index.html
+++ b/index.html
@@ -86,14 +86,6 @@
           <a-entity id="karigurashiButton" position="-0.8 -0.5 0" mixin="frame" class="raycastable menu-button">
             <a-entity gltf-model="#villager" scale="0.001 0.001 0.001" position="0 -1 0"></a-entity>
           </a-entity>
-
-          <a-entity id="kazetachinuButton" position="0 0 4" mixin="frame" class="raycastable menu-button">
-            <a-entity material="src: #kazetachinuPoster" mixin="poster"></a-entity>
-          </a-entity>
-
-          <a-entity id="ponyoButton" position="0.8 0 0" mixin="frame" class="raycastable menu-button">
-            <a-entity material="src: #ponyoPoster" mixin="poster"></a-entity>
-          </a-entity>
         </a-entity>
       
 
@@ -111,10 +103,10 @@
           <a-entity id="karigurashiMovieImage"   visible="false"></a-entity>
           <a-entity id="movieTitle"
             position="-0.68 -0.1 0"
-            text="shader: msdf; anchor: left; width: 1.5; font: https://cdn.aframe.io/examples/ui/Viga-Regular.json; color: white; value: Ponyo (2003)"></a-entity>
+            text="shader: msdf; anchor: left; width: 1.5; font: https://cdn.aframe.io/examples/ui/Viga-Regular.json; color: white; value: Валентина"></a-entity>
           <a-entity id="movieDescription"
             position="-0.68 -0.2 0"
-            text="baseline: top; shader: msdf; anchor: left; font: https://cdn.aframe.io/examples/ui/Viga-Regular.json; color: white; value: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."></a-entity>
+            text="baseline: top; shader: msdf; anchor: left; font: https://cdn.aframe.io/examples/ui/Viga-Regular.json; color: white; value: Меня зовут Валентина, мне 20 лет. С дества я живу в этой де"></a-entity>
         </a-entity>
       </a-entity>
     </a-scene>
