👭🍲 Checkpoint ./index.html:43714476/786 ./info-panel.js:43714476/1

--- a/index.html
+++ b/index.html
@@ -87,6 +87,20 @@
             position="-0.68 -0.1 0"
             text="baseline: top; shader: msdf; anchor: left; font: https://cdn.aframe.io/examples/ui/Viga-Regular.json; color: white; value:  My name is Valentina, I am 20 years old. I've been living in this village since childhood, we haven't had visitors for a long time."></a-entity>
         </a-entity>
+        <a-entity
+          id="infoPanel1"
+          position="0 0 0.5"
+          info-panel
+          visible="false"
+          scale="0.001 0.001 0.001"
+          >
+          <a-entity id="movieTitle1"
+            position="-0.68 0 0"
+            text="shader: msdf; anchor: left; width: 1.5; font: https://cdn.aframe.io/examples/ui/Viga-Regular.json; color: white; value: alentina"></a-entity>
+          <a-entity id="movieDescription1"
+            position="-0.68 -0.1 0"
+            text="baseline: top; shader: msdf; anchor: left; font: https://cdn.aframe.io/examples/ui/Viga-Regular.json; color: white; value:  My name is Valentina, I am 20 years old. I've been living in this village since childhood, we haven't had visitors for a long time."></a-entity>
+        </a-entity>
       </a-entity>
     </a-scene>
   </body>
