--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         position="0 1.6 0"
       ></a-entity>
       
-      <a-entity gltf-model="#boat" scale="0.01 0.01 01"></a-entity>
+      <a-entity gltf-model="#boat" scale="0.001 0.001 0.001" position="3 0 0"></a-entity>
       <a-entity gltf-model="#city" scale="1 1 1"></a-entity>
       <!-- Hand controls -->
       <a-entity id="leftHand" laser-controls="hand: left" raycaster="objects: .raycastable"></a-entity>
