🤗🍡 Checkpoint ./index.html:43714476/745

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <script src="info-panel.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
     <script src="//unpkg.com/aframe-physics-system@3.1.2/dist/aframe-physics-system.min.js"></script>  
-    <script src="https://rawgit.com/supermedium/superframe/master/components/animation-timeline/dist/aframe-animation-timeline-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-animation-timeline-component@2.0.0/dist/aframe-animation-timeline-component.min.js"></script>
   </head>
   <body>
     <a-scene
-      animation-timeline1="timeline: #boatTimeline; loop: true"
+      animation-timeline__1="timeline: #boatTimeline; loop: true"
    
       cursor="rayOrigin: mouse; fuse: false" raycaster="objects: .raycastable">
       <a-assets>
