📒👨‍❤️‍💋‍👨 Checkpoint ./index.html:43714476/91 ./.glitch-assets:43714476/412

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         visible="false" class="raycastable">
       </a-entity>
 
-      <a-entity gltf-model="#train" animation-mixer="clip:Animation"></a-entity>
+      <a-entity gltf-model="#train" animation-mixer="timeScale:0" shadow=""></a-entity>
       
       <a-entity  id="boatobg" gltf-model="#boat" scale="0.001 0.001 0.001" position="7 0 1" 
       animation__up="dur:2000;easing:easeInOutSine;from: 0; to: -0.3; loop:-1; property:object3D.position.y"
